--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -1,15 +1,18 @@
 .auth {
   &__top {
-    display: flex;
     justify-content: space-between;
     box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+  }
+
+  &__bottom {
+    justify-content: space-between;
   }
 
   &__content {
     padding: 20px;
   }
 
-  &__login-btn, &__registrarion-btn {
+  &__login-btn, &__registration-btn {
     flex: 0 1 50%;
     text-align: center;
     padding: 10px;
@@ -18,5 +21,16 @@
     &.active{
       border-bottom: 2px solid var(--blue);  
     }
+  }
+
+  &__login-content, &__registration-content {
+    width: 100%;
+  }
+
+  input {
+    width: 100%;
+    height: 40px;
+    margin: 0 0 20px 0;
+    padding: 5px;
   }
 }
