--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,28 +22,15 @@
   margin: 0 10px 0 0;
 }
 
-input {
-  border-radius: 5px;
-}
-
 .btn {
-  border-radius: 15px;
-  border: 1px solid var(--black);
-  padding: 5px 10px;
+  border-radius: 4px;
+  border: none;
+  padding: 10px 15px;
   cursor: pointer;
   text-transform: uppercase;
   font-size: 14px;
   color: var(--black);
-
-  &-a {
-    background-color: var(--green);
-    align-self: flex-start;
-  }
-
-  &-b {
-    background-color: var(--orange);
-    align-self: flex-start;
-  }
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
 
   &-green {
     background: var(--green);
@@ -62,6 +49,10 @@ input {
   &:disabled {
     background-color: var(--disabled);
     color: var(--black);
+  }
+
+  &:hover {
+    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
   }
 }
 
