feat: add authorization

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -7,6 +7,7 @@
   --blue: #304fb6;
   --green: #3a8140;
   --grey: #dedede;
+  --error: rgb(208, 0, 0);
   --orange: #f04c0b;
   --disabled: #787873;
   --overlay: #00000077;
