--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -43,6 +43,13 @@
   .input-error {
     color: red;
     font-size: 14px;
-    padding: 5px 0;
+    padding: 2px 0 5px;
   }
+}
+
+.auth-status-modal {
+  position: absolute;
+  top: 0;
+  right: 0;
+  animation: bounceInOutRight 3s;
 }
