--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,14 +1,14 @@
 @import "~normalize.css";
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 :root {
   --white: #ffffff;
   --black: #000000;
-  --blue: #304fb6;
-  --green: #3a8140;
+  --blue: rgb(0, 127, 255);
+  --darkblue: rgba(10, 25, 41, 0.72);
+  --success: #3a8140;
   --grey: #dedede;
   --error: rgb(208, 0, 0);
-  --orange: #f04c0b;
   --disabled: #787873;
   --overlay: #00000077;
 }
@@ -47,10 +47,10 @@ html {
 
 html,
 body {
-  color: var(--black);
-  font-family: "Roboto", sans-serif;
+  color: var(--white);
+  font-family: "IBM Plex Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 600;
   line-height: 1.15;
   overflow-x: hidden;
   background-color: var(--grey);
@@ -74,4 +74,3 @@ h3 {
   margin: 0;
   padding: 0;
 }
-
