--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,22 +22,31 @@
   margin: 0 10px 0 0;
 }
 
+.justify-content-sb {
+  justify-content: space-between;
+}
+
+.align-items-center {
+  align-items: center;
+}
+
 .btn {
   border-radius: 4px;
   border: none;
   padding: 10px 15px;
   cursor: pointer;
-  text-transform: uppercase;
   font-size: 14px;
   color: var(--black);
   box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  font-weight: 600;
 
-  &-login, &-logout {
+  &-login,
+  &-logout {
     margin: 0 0 0 auto;
   }
 
   &-success {
-    background: var(--green);
+    background: var(--success);
     color: var(--white);
   }
 
@@ -46,9 +55,20 @@
     color: var(--white);
   }
 
+  &-lightblue {
+    background: var(--lightblue);
+    color: var(--white);
+  }
+
   &-blue {
     background: var(--blue);
     color: var(--white);
+  }
+
+  &-darkblue {
+    background: var(--darkblue);
+    color: var(--white);
+    border: 1px solid rgb(38, 93, 151);
   }
 
   &:active {
@@ -103,13 +123,18 @@
 }
 
 .app {
-  display: flex;
-  flex-direction: column;
+  background: rgb(0, 30, 60);
   min-height: 100%;
 }
 
 .content {
   flex: 1 1 auto;
+}
+
+.container {
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 0 10px;
 }
 
 @keyframes fadein {
