--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -10,10 +10,78 @@
   ul {
     li {
       cursor: pointer;
-      
+      white-space: nowrap;
+
       & + li {
         margin: 0 0 0 20px;
       }
     }
+  }
+}
+
+@media (max-width: 750px) {
+  .header {
+    .logo {
+      display: none;
+    }
+
+    ul {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      transform: translate(0, -100%);
+      transition: all 0.5s;
+      overflow: auto;
+      &.active {
+        transform: translate(0, 0%);
+      }
+    }
+  }
+}
+
+.icon-menu {
+  display: none;
+  position: fixed;
+  top: 20px;
+  left: 10px;
+  width: 30px;
+  height: 18px;
+  cursor: pointer;
+  z-index: 5;
+  span {
+    transition: all 0.5s;
+    top: 8px;
+    left: 0px;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    &:first-child {
+      top: 0px;
+    }
+    &:last-child {
+      top: auto;
+      bottom: 0px;
+    }
+  }
+
+  &.active {
+    span {
+      transform: scale(0);
+      &:first-child {
+        transform: rotate(-45deg);
+        top: 8px;
+      }
+      &:last-child {
+        transform: rotate(45deg);
+        bottom: 8px;
+      }
+    }
+  }
+
+  @media (max-width: 750px) {
+    display: block;
   }
 }
