--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,25 +1,27 @@
+.app {
+  background: rgb(0, 30, 60);
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.container {
+  max-width: 1220px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
+
+.content {
+  flex: 1 1 auto;
+}
+
+.title {
+  font-size: 24px;
+  font-weight: 700;
+}
+
 .row {
   display: flex;
-}
-
-.mb-10 {
-  margin: 0 0 10px 0;
-}
-
-.mb-20 {
-  margin: 0 0 20px 0;
-}
-
-.mb-40 {
-  margin: 0 0 40px 0;
-}
-
-.mr-5 {
-  margin: 0 5px 0 0;
-}
-
-.mr-10 {
-  margin: 0 10px 0 0;
 }
 
 .justify-content-sb {
@@ -120,21 +122,6 @@
     font-size: 20px;
     cursor: pointer;
   }
-}
-
-.app {
-  background: rgb(0, 30, 60);
-  min-height: 100%;
-}
-
-.content {
-  flex: 1 1 auto;
-}
-
-.container {
-  max-width: 1220px;
-  margin: 0 auto;
-  padding: 0 10px;
 }
 
 @keyframes fadein {
