--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100%;
+  overflow: hidden;
 }
 
 .container {
@@ -96,12 +97,14 @@
 
   &__body {
     position: absolute;
-    width: 500px;
+    max-width: 500px;
+    width: calc(100% - 20px);
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: var(--white);
     z-index: 10;
+    border-radius: 10px;
   }
 
   &__overlay {
