--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -39,14 +39,9 @@
   box-sizing: border-box;
 }
 
-html {
-  overflow-y: scroll;
-  overflow-y: overlay;
-  overflow-y: -moz-overlay;
-}
-
 html,
 body {
+  overflow-x: hidden;
   color: var(--white);
   font-family: "IBM Plex Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 16px;
@@ -54,6 +49,10 @@ body {
   line-height: 1.15;
   background-color: var(--grey);
   height: 100%;
+}
+
+body {
+  overflow-y: scroll;
 }
 
 ul {
