--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -29,7 +29,7 @@
       display: none;
     }
 
-    ul {
+    .body-menu {
       display: block;
       position: fixed;
       width: 100%;
@@ -50,7 +50,7 @@
         }
       }
 
-      &.active {
+      &--active {
         transform: translate(0, 0);
       }
     }
@@ -85,7 +85,7 @@
     }
   }
 
-  &.active {
+  &--active {
     span {
       transform: scale(0);
       &:first-child {
