--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,7 +33,6 @@
   align-items: center;
 }
 
-
 .btn {
   border-radius: 4px;
   border: none;
@@ -41,7 +40,8 @@
   cursor: pointer;
   font-size: 14px;
   color: var(--black);
-  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+  box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+    0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
   font-weight: 600;
 
   &-login,
@@ -85,7 +85,8 @@
   }
 
   &:hover {
-    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    box-shadow: 0px 2px 4px -1px rgb(0 0 0 / 20%),
+      0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
   }
 }
 
@@ -129,9 +130,10 @@
   }
 }
 
+.hide {
+  display: none;
 }
-.hide{
-  display:none;
+
 @keyframes fadein {
   from {
     opacity: 0;
