--- a/src/scss/electronBook.scss
+++ b/src/scss/electronBook.scss
@@ -59,6 +59,7 @@
     overflow: hidden;
     background: var(--white);
     margin: 0 0 10px 0;
+    cursor: pointer;
   }
 }
 
@@ -73,5 +74,69 @@
     padding: 7px;
     margin: 0 10px 0 30px;
     max-width: 70px;
+  }
+}
+
+.word-card {
+  background: var(--white);
+  color: var(--black);
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 10px;
+  margin: 0 0 20px 0;
+
+  &__image {
+    position: relative;
+    flex: 0 0 300px;
+    height: 300px;
+
+    img {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+    }
+  }
+
+  &__body {
+    flex: 1 1 auto;
+    padding: 0 0 0 30px;
+  }
+
+  &__top {
+  }
+
+  &__word {
+    font-size: 24px;
+    text-transform: capitalize;
+  }
+
+  &__transcription {
+  }
+
+  &__audio {
+  }
+
+  &__mid {
+  }
+
+  &__translate {
+  }
+
+  &__meaning {
+  }
+
+  &__meaningtranslate {
+  }
+
+  &__bottom {
+  }
+
+  &__example {
+  }
+
+  &__exampletranslate {
   }
 }
