--- a/src/scss/sprint.scss
+++ b/src/scss/sprint.scss
@@ -5,11 +5,13 @@
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    font-size: 30px;  
 
     &__word-box {
         width: 50%;
         height: 50%;
-        border: solid 2px black;
+        border: solid 2px white;
+        border-radius: 20px;
         display: flex;
         flex-flow: column;
         justify-content: center;
@@ -34,9 +36,20 @@
         width: 50%;
         height: 10%;
     }
+
+    &__wrong-answer,
+    &__right-answer {
+    border-radius: 4px;
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+    font-weight: 600;
+    color: white;
+    }
     
     &__wrong-answer {
-        border: solid 2px red;
+        background-color: red;
         height: 50%;
         width: 35%;
         display: flex;
@@ -45,7 +58,7 @@
     }
 
     &__right-answer {
-        border: solid 2px green;
+        background-color: green;
         height: 50%;
         width: 35%;
         display: flex;
@@ -54,13 +67,21 @@
     }
 
     &__timer {
-        width: 5%;
-        height: 5%;
-        border: black solid 1px;
+        width: 100px;
+        height: 100px;
+        border: white solid 2px;
+        border-radius: 50%;
         margin-bottom: 20px;
         display: flex;
         justify-content: center;
         align-items: center;
+        color: rgba($color: #fff, $alpha: 1);
+        text-shadow:
+        0 0 1px rgba($color: #fff, $alpha: 1),
+        0 0 5px rgba($color: #fff, $alpha: 1),
+        0 0 10px rgba($color: rgb(255, 255, 255), $alpha: 1),
+        0 0 40px rgba($color: rgb(255, 255, 255), $alpha: 1),
+        0 0 100px rgba($color: rgb(255, 255, 255), $alpha: 1);
     }
 
     &__count-box {
@@ -74,13 +95,71 @@
     &__score,
     &__current-count,
     &__streak {
-        width: 10%;
+        display: flex;
+        width: 15%;
         height: 100%;
-        border: black solid 1px;
         justify-content: center;
         align-items: center;
     }
 
+    &__streak {
+        font-style: italic;
+    }
+
+    &__current-count,
+    &__score{
+        color: rgba($color: #fff, $alpha: 0.3);
+        animation: glow 5s ;
+        border: 2px solid white;
+        border-radius: 50px;
+    }
+
+    @keyframes glow {
+        from{
+            color: rgba($color: #fff, $alpha: 1);
+            text-shadow:
+            0 0 1px rgba($color: #fff, $alpha: 1),
+            0 0 5px rgba($color: #fff, $alpha: 1),
+            0 0 10px rgba($color: rgb(184, 177, 177), $alpha: 0.9),
+            0 0 40px rgba($color: rgb(219, 211, 211), $alpha: 0.9),
+            0 0 80px rgba($color: rgb(196, 190, 190), $alpha: 0.9);
+        }
+
+        to{
+            color: rgba($color: #fff, $alpha: 0.3);
+            text-shadow: none;
+        }
+    }
+    
+
+    .dope,
+    .cool,
+    .brilliant,
+    .amazing,
+    .spectacular {
+        font-size: 75px;
+        text-shadow: 0 0 4px rgb(255, 255, 255);
+    }
+
+    .dope{
+        color: rgb(0, 163, 68);
+    }
+
+    .cool{
+        color: rgb(0, 247, 255);
+    }
+
+    .brilliant{
+        color: rgb(255, 0, 221);
+    }
+
+    .amazing{
+        color: rgb(255, 0, 0);
+    }
+
+    .spectacular{
+        color: rgb(208, 255, 0);
+    }
 }
 
 .sprint-stat {
@@ -92,12 +171,24 @@
     align-items: center;
 
     &__stat-box {
-        width: 50%;
-        height: 50%;
-        border: solid 2px black;
+        width: 60%;
+        height: 60%;
+        border: solid 2px white;
+        padding: 10px;
         display: flex;
         flex-flow: column;
         overflow-y: scroll;
+    }
+
+    &__streak,
+    &__score {
+        display: flex;
+        flex-flow: row;
+        justify-content: center;
+    }
+
+    &__score {
+        font-size: 30px;
     }
 
     &__correct-words,
@@ -106,13 +197,47 @@
         height: 100%;
         display: flex;
         flex-flow: column;
-        border: solid 2px red;
+    }
+
+    &__correct-word,
+    &__incorrect-word {
+        display: flex;
+        flex-flow: row;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+        color: black;
+        background-color: white;
+        border-radius: 20px;
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
+
+    &__correct-audio,
+    &__incorrect-audio {
+        background-color: rgb(0, 127, 255);
+        border-radius: 4px;
+        border: none;
+        padding: 5px 20px;
+        margin-left: 20px;
+        cursor: pointer;
+        box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+        font-weight: 600;
+        color: white;
     }
 
     &__again-button {
-        border: solid 2px red;
-        height: 50%;
-        width: 35%;
+        background-color: rgb(0, 127, 255);
+        border-radius: 4px;
+        border: none;
+        padding: 5px 20px;
+        margin-left: 20px;
+        cursor: pointer;
+        box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+        font-weight: 600;
+        color: white;
+        height: 100px;
+        width: 200px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -121,17 +246,25 @@
 }
 
 .sprint-difficulty {
-    width: 100%;
+    width: 50%;
+    margin-left: 25%;
     height: 90vh;
     display: flex;
     flex-flow: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
 
     &__button {
-        border: solid 2px red;
-        height: 50%;
-        width: 35%;
+        background-color: rgb(0, 127, 255);
+        border-radius: 4px;
+        border: none;
+        padding: 10px 15px;
+        cursor: pointer;
+        box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%), 0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
+        font-weight: 600;
+        color: white;
+        height: 50px;
+        width: 50px;
         display: flex;
         justify-content: center;
         align-items: center;
