--- a/src/scss/electronBook.scss
+++ b/src/scss/electronBook.scss
@@ -1,4 +1,67 @@
 .electron-book {
+  .group-1 {
+    .word-card {
+      border: 3px solid rgb(242, 105, 92);
+      &__top {
+        border-left: 4px solid rgb(242, 105, 92);
+      }
+    }
+  }
+
+  .group-2 {
+    .word-card {
+      border: 3px solid rgb(242, 166, 99);
+      &__top {
+        border-left: 4px solid rgb(242, 166, 99);
+      }
+    }
+  }
+
+  .group-3 {
+    .word-card {
+      border: 3px solid rgb(250, 170, 186);
+      &__top {
+        border-left: 4px solid rgb(250, 170, 186);
+      }
+    }
+  }
+
+  .group-4 {
+    .word-card {
+      border: 3px solid rgb(136, 191, 176);
+      &__top {
+        border-left: 4px solid rgb(136, 191, 176);
+      }
+    }
+  }
+
+  .group-5 {
+    .word-card {
+      border: 3px solid rgb(96, 164, 191);
+      &__top {
+        border-left: 4px solid rgb(96, 164, 191);
+      }
+    }
+  }
+
+  .group-6 {
+    .word-card {
+      border: 3px solid rgb(89, 72, 77);
+      &__top {
+        border-left: 4px solid rgb(89, 72, 77);
+      }
+    }
+  }
+
+  .group-7 {
+    .word-card {
+      border: 3px solid rgb(199, 21, 21);
+      &__top {
+        border-left: 4px solid rgb(199, 21, 21);
+      }
+    }
+  }
+
   &__title {
     text-align: center;
     margin: 0 0 20px 0;
@@ -53,18 +116,48 @@
     padding: 0 0 0 20px;
   }
 
+  &__groups-title {
+    text-align: right;
+  }
+
   &__group {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: var(--black);
+    color: var(--white);
     width: 50px;
     height: 50px;
     border-radius: 50%;
     overflow: hidden;
     background: var(--white);
-    margin: 0 0 10px 0;
+    margin: 20px auto;
     cursor: pointer;
+
+    &--active {
+      border: 4px solid var(--white);
+    }
+
+    &--1 {
+      background: rgb(242, 105, 92);
+    }
+    &--2 {
+      background: rgb(242, 166, 99);
+    }
+    &--3 {
+      background: rgb(250, 170, 186);
+    }
+    &--4 {
+      background: rgb(136, 191, 176);
+    }
+    &--5 {
+      background: rgb(96, 164, 191);
+    }
+    &--6 {
+      background: rgb(89, 72, 77);
+    }
+    &--7 {
+      background: rgb(199, 21, 21);
+    }
   }
 }
 
@@ -95,7 +188,6 @@
     position: relative;
     flex: 0 0 250px;
     height: 250px;
-    border: 4px solid #000;
 
     img {
       position: absolute;
@@ -149,19 +241,73 @@
     margin: 0 0 0 14px;
     color: #8a8a8a;
   }
+}
 
-  &__meaning {
+@media (max-width: 760px) {
+  .word-card {
+    display: flex;
+    flex-direction: column;
+
+    &__body {
+      padding: 30px 0 0 0;
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .electron-book {
+    &__row {
+      flex-direction: column-reverse;
+      margin: 0;
+    }
+
+    &__col {
+      padding: 0;
+      margin: 0 0 20px 0;
+    }
+
+    &__wrapper {
+      flex-direction: column-reverse;
+    }
+
+    &__groups {
+      display: flex;
+      padding: 0;
+    }
+
+    &__group {
+      width: 35px;
+      height: 35px;
+    }
+
+    &__groups-title {
+      text-align: center;
+    }
   }
 
-  &__meaningtranslate {
+  .word-card {
+    &__top, &__bottom {
+      margin: 0 0 20px 0;
+    }
+
+    &__mid {
+      margin: 20px 0;
+    }
   }
 
-  &__bottom {
-  }
+  .pagination {
+    flex-wrap: wrap;
 
-  &__example {
-  }
+    &__number {
+      margin: 0 10px;
+    }
 
-  &__exampletranslate {
+    &__input {
+      margin: 0 10px 0 20px;
+    }
+
+    .btn {
+      padding: 10px 3px;
+    }
   }
 }
