--- a/src/scss/audiocall.scss
+++ b/src/scss/audiocall.scss
@@ -2,6 +2,7 @@
   width: 50%;
   height: 45vh;
   margin: 0 auto;
+  margin-top:10%;
   display: flex;
   flex-direction: column;
   padding: 30px;
@@ -47,7 +48,7 @@
     width: 80%;
   }
   @media (max-width: 400px) {
-    width: 100%;
+    width: 98%;
   }
 }
 .game-audio {
