--- a/src/scss/audiocall.scss
+++ b/src/scss/audiocall.scss
@@ -2,7 +2,7 @@
   width: 50%;
   height: 45vh;
   margin: 0 auto;
-  margin-top:10%;
+  margin-top: 10%;
   display: flex;
   flex-direction: column;
   padding: 30px;
@@ -14,19 +14,21 @@
   color: #000;
 
   &__icon {
-    text-align: center;
     width: 64px;
     height: 64px;
-    margin: 0 auto 20px;
     background-image: url("../assets/icons/headphones.png");
     background-size: contain;
     background-repeat: no-repeat;
+    background-position: center;
   }
 
   & h2 {
     font-size: 20px;
     text-align: center;
     margin: 0 0 20px 0;
+    @media (max-height: 580px) {
+      margin: 0;
+    }
   }
 
   & h4 {
@@ -47,8 +49,14 @@
   @media (max-width: 700px) {
     width: 80%;
   }
+  @media (max-height: 580px) {
+    row-gap: 5px;
+    padding: 5px;
+    margin: 0 auto;
+  }
   @media (max-width: 400px) {
     width: 98%;
+    padding: 50px 10px 20px 10px;
   }
 }
 .game-audio {
