fix: fix 6 group hide after logout

--- a/src/scss/electronBook.scss
+++ b/src/scss/electronBook.scss
@@ -244,10 +244,10 @@
 
   &__buttons {
     margin: 20px 0 0 0;
-  }
 
-  &__difficult {
-    margin: 0 20px 0 0;
+    .btn + .btn {
+      margin: 0 0 0 20px;
+    }
   }
 }
 
