--- a/src/scss/statistics.scss
+++ b/src/scss/statistics.scss
@@ -40,3 +40,57 @@
     padding: 50px 10px 20px 10px;
   }
 }
+
+.statistics-auth {
+  width: 98%;
+  height: 75vh;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  box-sizing: border-box;
+  background-color: var(--white);
+  border-radius: 10px;
+  align-items: center;
+  row-gap: 15px;
+  color: #000;
+
+  &__icon {
+    width: 64px;
+    height: 64px;
+    margin-bottom: 0;
+    background-image: url("../assets/icons/bar-chart.png");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
+  &__wrapper {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__item {
+    height: 100%;
+    width: 30%;
+    border: 2px solid var(--darkblue);
+    background-color: #eee8aa;
+    border-radius: 10px;
+    padding: 20px;
+  }
+
+  @media (max-width: 700px) {
+    width: 80%;
+  }
+  @media (max-height: 580px) {
+    row-gap: 5px;
+    padding: 5px;
+    margin: 0 auto;
+  }
+  @media (max-width: 400px) {
+    width: 98%;
+    padding: 50px 10px 20px 10px;
+  }
+}
