--- a/src/scss/electronBook.scss
+++ b/src/scss/electronBook.scss
@@ -100,6 +100,12 @@
     overflow: hidden;
     padding: 10px;
     cursor: pointer;
+    width: 100%;
+
+    &:disabled {
+      background: var(--disabled);
+      cursor: not-allowed;
+    }
   }
 
   &__words {
