--- a/src/scss/statistics.scss
+++ b/src/scss/statistics.scss
@@ -70,6 +70,14 @@
     height: 70%;
     display: flex;
     justify-content: space-between;
+
+    @media (max-width: 960px) {
+      flex-direction: column;
+      height: 75%;
+      align-items: center;
+      row-gap: 20px;
+      overflow-y: scroll;
+    }
   }
 
   &__item {
@@ -79,18 +87,25 @@
     background-color: #eee8aa;
     border-radius: 10px;
     padding: 20px;
+
+    @media (max-width: 960px) {
+      padding: 5px;
+      width: 80%;
+    }
+
+    @media (max-width: 560px) {
+      padding: 5px;
+      width: 98%;
+      font-size: 1rem;
+    }
+
+    @media (max-width: 400px) {
+      padding: 3px;
+      font-size: 0.8rem;
+    }
   }
 
-  @media (max-width: 700px) {
-    width: 80%;
-  }
-  @media (max-height: 580px) {
-    row-gap: 5px;
-    padding: 5px;
-    margin: 0 auto;
-  }
-  @media (max-width: 400px) {
-    width: 98%;
-    padding: 50px 10px 20px 10px;
+  @media (max-width: 960px) {
+    padding: 10px;
   }
 }
