--- a/src/scss/audiocall.scss
+++ b/src/scss/audiocall.scss
@@ -244,6 +244,12 @@
     width: 80%;
     height: 70%;
   }
+  @media (max-height: 770px) {
+    row-gap: 2%;
+  }
+  @media (max-height: 650px) {
+    padding: 10px 15px 10px 15px;
+  }
 
   & button {
     width: 8rem;
@@ -277,9 +283,14 @@
     width: 100%;
     justify-content: space-around;
 
-    & buttons:hover {
-      transform: scale(1.1);
-      border: 2px solid rgb(129, 129, 151);
+    & button {
+      @media (max-height: 650px) {
+        padding: 2px !important;
+      }
+    }
+
+    & button:hover {
+      background-color: rgb(77, 77, 131);
     }
     @media (max-width: 500px) {
       flex-direction: column;
@@ -291,6 +302,11 @@
     font-size: 20px;
     padding: 0px;
     text-align: center;
+
+    @media (max-height: 650px) {
+      margin: 5px;
+      font-size: 18px;
+    }
   }
 
   &_circle {
