--- a/src/scss/statistics.scss
+++ b/src/scss/statistics.scss
@@ -62,12 +62,10 @@
     column-gap: 10px;
     color: #000;
 
-    @media (max-width: 960px) {
+    @media (max-width: 600px) {
       flex-direction: column;
-      height: 75%;
       align-items: center;
-      row-gap: 20px;
-      overflow-y: scroll;
+      row-gap: 15px;
     }
   }
   &__column1 {
@@ -75,6 +73,13 @@
     display: flex;
     flex-direction: column;
     row-gap: 10px;
+
+    @media (max-width: 960px) {
+      width: 38%;
+    }
+    @media (max-width: 600px) {
+      width: 100%;
+    }
   }
   &__column2 {
     width: 45%;
@@ -82,6 +87,13 @@
     flex-direction: column;
     align-items: flex-start;
     row-gap: 10px;
+
+    @media (max-width: 960px) {
+      width: 58%;
+    }
+    @media (max-width: 600px) {
+      width: 100%;
+    }
   }
 
   &__card_new,
@@ -105,6 +117,7 @@
   }
   &__card_percent {
     flex-direction: column;
+    padding-top: 12%;
     height: 200px;
     row-gap: 20px;
     border: 3px solid rgb(242, 105, 92);
@@ -115,13 +128,21 @@
     color: rgb(5, 97, 97);
     margin: 0;
     font-size: 32px;
+
+    @media (max-width: 400px) {
+      font-size: 40px;
+    }
   }
 
   &__words_text {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 500;
     color: rgb(0, 0, 0);
     margin: 0;
+
+    @media (max-width: 400px) {
+      font-size: 18px;
+    }
   }
 
   &__card_audio,
@@ -159,6 +180,10 @@
         color: rgb(242, 105, 92);
         font-size: 24px;
         font-weight: 500;
+
+        @media (max-width: 400px) {
+          font-size: 20px;
+        }
       }
     }
   }
@@ -185,6 +210,10 @@
         color: rgb(242, 166, 99);
         font-size: 24px;
         font-weight: 500;
+
+        @media (max-width: 400px) {
+          font-size: 20px;
+        }
       }
     }
   }
@@ -194,8 +223,16 @@
   color: rgb(5, 97, 97);
   font-size: 22px;
   font-weight: 500;
+
+  @media (max-width: 400px) {
+    font-size: 18px;
+  }
 }
 .game_text {
   font-size: 18px;
   margin: 0;
+
+  @media (max-width: 400px) {
+    font-size: 16px;
+  }
 }
