--- a/src/scss/statistics.scss
+++ b/src/scss/statistics.scss
@@ -100,7 +100,7 @@
   &__card_learn,
   &__card_percent {
     width: 100%;
-    height: 110px;
+    height: 100px;
     padding: 15px;
     border-radius: 10px;
     background-color: #fff;
@@ -112,10 +112,12 @@
 
   &__card_learn {
     display: flex;
+    padding: 12px;
+    height: 120px;
     flex-flow: column;
     justify-content: space-between;
   }
-   
+
   &__learn-wrapper {
     display: flex;
     flex-flow: row;
@@ -123,10 +125,9 @@
     align-items: center;
     width: 100%;
   }
-  
+
   &__learn-wrapper &__words_text {
     margin-left: 20px;
-
   }
 
   &__card_new {
